2010-09-02  Andreas Kling  <andreas.kling@nokia.com>

Rubber-stamped by Simon Hausmann.

        [Qt] REGRESSION(r62898): tst_QWebFrame crashing
        https://bugs.webkit.org/show_bug.cgi?id=43039

        Rolling out the offending change <http://trac.webkit.org/changeset/62898>

        * tests/qwebframe/tst_qwebframe.cpp:
        (tst_QWebFrame::evalJSV):
2010-09-02  Andreas Kling  <andreas.kling@nokia.com>

        Rubber-stamped by Simon Hausmann.

        [Qt] REGRESSION(r62898): tst_QWebFrame crashing
        https://bugs.webkit.org/show_bug.cgi?id=43039

        Rolling out the offending change <http://trac.webkit.org/changeset/62898>

        * bridge/qt/qt_instance.cpp:
        (JSC::Bindings::QtInstance::markAggregate):


Canonical link: https://commits.webkit.org/57426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66667 268f45cc-cd09-0410-ab3c-d52691b4dbfc